<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vcs_and_github_assi"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sami_ullah"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_no_14304"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            tools:ignore="UselessParent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/please_enter_your_email"
                android:textColorHint="@color/white"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"
                android:id="@+id/emailEditText"
                android:autofillHints="" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/please_enter_your_password"
                android:textColorHint="@color/white"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"
                android:id="@+id/passwordEditText"
                tools:ignore="TextFields"
                android:autofillHints="" />


        </LinearLayout>

    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/submit"
        android:id="@+id/submitButton"/>

</RelativeLayout>